# C-CPP-ll

./: .gitignore  42test  42test.cc  README.md
.Trash-1000/files/: callshift.cc  main.ih
.Trash-1000/info/: callshift.cc.trashinfo  main.ih.trashinfo
week_1/ex1/: CMakeLists.txt  ex62.tex  main  main.cc  main.cpp
week_1/ex2/: CMakeLists.txt  demo.h  main  main.cc
week_1/ex2/1/: header.ih  process.cc  promptget.cc
week_1/ex3/: CMakeLists.txt  ex3  main.cc
week_1/ex3/matrix/: matrix.h
week_1/ex4/: CMakeLists.txt  main  main.cc
week_1/ex5/: CMakeLists.txt  main  main.cc  main.ih
week_1/ex63/: CMakeLists.txt  ex63.tex  factory.cc  main  main.cc  main.ih  output.txt
week_1/ex64/: ex64  main.cc  process.cc
week_1/ex7/: CMakeLists.txt  ex7  main  main.cc
week_1/ex7/matrix/: extractrows.cc  functor2.cc  functor3.cc  matrix.h  matrix4.cc  operatorcompadd2.cc  operatorequalto.cc  operatorinsert.cc  operatornotequalto.cc
week_1/ex7a/: CMakeLists.txt  main.cc
week_1/ex7a/strings/: copyconstructor.cc  moveconstructor.cc  operatorassign.cc  operatorequalto.cc  operatornotequalto.cc  strings.h  strings2.cc  swap.cc
week_1/text/: ex61.tex  ex62.tex  ex63.tex  set_8.tex  week_1.tex  week_1_rev.tex
week_2/ex11/: ex11  main.cc  main1  main1.cc  main2  main2.cc  main3  main3.cc  main4  main4.cc  outputMain1.txt  outputMain2.txt  outputMain4.txt
week_2/ex12/: CMakeLists.txt  ex12  main  main.cc  main.ih  ouputEx12.txt  outputMain.txt
week_2/ex13/: CMakeLists.txt  ex13  main  main.cc  main1  main1.cc
week_2/ex13rev/: CMakeLists.txt
week_2/ex13rev/matrix/: at.cc  identity.cc  matrix.ih  tr.cc  transpose.cc
week_2/ex16/: CMakeLists.txt  function1.cc  function2.cc  function3.cc  main  main.cc  main.ih  output.txt
week_2/ex17/: CMakeLists.txt  ex17  main  main.cc  main.ih  outputDouble.txt  outputInt.txt  test.cc
week_2/ex17/showexcepts/: NoEx.cc  asNoexcept.cc  asathrowlist.cc  asnoexcept.cc  frame  showexcepts.h  showexcepts.ih  showexcepts1.cc  throwlist.cc
week_2/text/: week_2.tex  week_2_rev.tex
week_3/ex20/: CMakeLists.txt  main  main.cc  main.ih  output.txt
week_3/ex20/addition/: addition.h  addition.ih  operator1.cc  operator2.cc  operator3.cc  operator4.cc  operatoradd1.cc  operatoradd2.cc  operatoraddis1.cc  operatoraddis2.cc
week_3/ex20/binops/: binops.h  binops.ih  binopssub.cc
week_3/ex20/operations/: operations.h
week_3/ex20/subtraction/: operatorsub1.cc  operatorsubis1.cc  subtraction.h  subtraction.ih
week_3/ex23/: CMakeLists.txt  main  main.cc  main.ih  output.txt
week_3/ex23/addition/: addition 2.h  operatoradd1.cc  operatoradd2.cc  operatoraddis1.cc  operatoraddis2.cc
week_3/ex23/binops/: binops 2.h  binopsadd.cc
week_3/ex23/operations/: operations 2.h  operations.cc  operations.h
week_3/ex23/subtraction/: operatorsub1.cc  operatorsub2.cc  operatorsubis1.cc  operatorsubis2.cc  subtraction 2.h
week_3/ex24/: ex24  factory.cc  main.cc  main.ih
week_3/text/: week_3.tex
week_4/ex25/: CMakeLists.txt  main  main.cc
week_4/ex25/bistream/: bistream.h  bistream.ih  bistream1.cc  operatorinsert.cc
week_4/ex25/bistreambuffer/: bistreambuffer.h  bistreambuffer.ih  bistreambuffer1.cc  overflow.cc
week_4/ex26/: CMakeLists.txt  ex26  main  main.cc  test.txt
week_4/ex26/ifdstreambuf/: destructor.cc  ifdstreambuf.h  ifdstreambuf.ih  ifdstreambuf1.cc  ifdstreambuf2.cc  open.cc  underflow.cc  xsgetn.cc
week_4/ex27/: CMakeLists.txt  ex27  main  main.cc  test2.txt
week_4/ex27/ofdstreambuf/: destructor.cc  ofdstreambuf.h  ofdstreambuf.ih  ofdstreambuf1.cc  ofdstreambuf2.cc  open.cc  overflow.cc  sync.cc
week_4/ex28/: CMakeLists.txt  Makefile  ex28  main.cc
week_4/ex28/ifdstream/: ifdstream.cc  ifdstream.h  ifdstream.ih
week_4/ex28/ifdstreambuf/: close.cc  underflow.cc
week_4/ex28/ofdstream/: ofdstream.cc  ofdstream.h  ofdstream.ih
week_4/ex28/ofdstreambuf/: close.cc  ofdstreambuf.h  ofdstreambuf1.cc  ofdstreambuf2.cc  open.cc  sync.cc
week_4/ex29/: CMakeLists.txt  main  main.cc
week_4/ex29/derived/: childprocess.cc  derived.h  derived.ih  derived1.cc  destructor.cc  parentprocess.cc
week_4/ex29/fork/: fork.cc  fork.h  fork.ih  waitforchild.cc
week_4/ex29/test/: test  test.cc
week_4/ex31/: CMakeLists.txt  ex31  main.cc  main.ih
week_4/ex33/: main.cc
week_4/text/: week_4.tex  week_4_rev.tex
week_5/: set5.zip.asc
week_5/2nd attempt submission/: set5.zip.asc
week_5/3rd attempt submission/: set5.zip.asc
week_5/ex32/: CMakeLists.txt  main  main.cc
week_5/ex33/: CMakeLists.txt  main  main.cc
week_5/ex35/: CMakeLists.txt  main.cpp
week_5/ex37/: CMakeLists.txt
week_5/ex37b/: CMakeLists.txt  main.cpp
week_5/ex38/: CMakeLists.txt  main.cpp
week_5/revision/: week_5_rev.tex
week_5/set5/: metadata.txt
week_5/text/: week_5.tex
week_6/ex42/: CMakeLists.txt  main  main.cc
week_6/ex43/: CMakeLists.txt  main.cpp
week_6/ex44/: CMakeLists.txt  display.cc  ex44  main  main.cc  main.ih  output.txt  text.txt  vowels.cc
week_6/ex45/: main  main.cc  words.txt  words2.txt
week_6/ex46/: copy  copy.cc  foreach  foreach.cc
week_6/text/: week_6.tex
week_7/: main.cc
week_7/49prutsen/: Makefile  eratosthenes.cc  main  main.cc
week_7/ex49/: main  main.cc  main.ih  main2  waiting.cc
week_7/ex50/: main.cc
week_7/ex51/: CMakeLists.txt  main  main.cc  main.ih  printtime.cc
week_7/ex52/: Makefile  callshift.cc  ex52  main  main.cc  main.ih  output.txt
week_7/ex53/: ex53  main.cc  main.ih  ouput.txt  output.txt  processq.cc
week_7/text/: week_7.tex  week_7_rev.tex
week_8/: main1.cc
week_8/ex57/: main  main.cc
week_8/ex58/: ex58  main  main.cc  main1
week_8/ex58_rev/: ex58_rev  main  main.cc
week_8/ex59/: client.cc  ex59  getspecs.cc  innerproduct.cc  main  main.cc  main.ih  newex59  produce.cc
week_8/ex59klaas/: ex59  main.cc
week_8/ex60/: main  main.cc
week_8/ex60_rev/: main  main.cc
week_8/ex62/: main  main.cc
week_8/text/: week_8.tex  week_8_rev.tex
week_9/ex1/: add.h  main  main.cc  main1  pointerunion.h  source1.cc  source2.cc
week_9/text/: week_1.tex
(+119 files in other folders)
